# pixel-art-pipeline

./: CLAUDE.md  Cargo.toml
crates/pixelpipe-cli/: Cargo.toml
crates/pixelpipe-cli/examples/: generate_test_sprites.rs
crates/pixelpipe-cli/src/: main.rs
crates/pixelpipe-cli/src/commands/: build.rs  init.rs  mod.rs  validate.rs  watch.rs
crates/pixelpipe-core/: Cargo.toml
crates/pixelpipe-core/src/: error.rs  lib.rs  pipeline.rs
crates/pixelpipe-core/src/animation/: gif.rs  mod.rs  strip.rs
crates/pixelpipe-core/src/config/: mod.rs  schema.rs
crates/pixelpipe-core/src/output/: canvas.rs  css.rs  mod.rs  phaser.rs
crates/pixelpipe-core/src/packer/: maxrects.rs  mod.rs
crates/pixelpipe-core/src/palette/: constraint.rs  extract.rs  mod.rs  swap.rs
crates/pixelpipe-core/src/scale/: mod.rs
crates/pixelpipe-core/tests/: animation_integration.rs  packing_integration.rs  palette_integration.rs
crates/pixelpipe-gui/: Cargo.toml
crates/pixelpipe-gui/src/: app.rs  drag_drop.rs  main.rs  state.rs  texture.rs
crates/pixelpipe-gui/src/panels/: animation_preview.rs  atlas_viewer.rs  build_runner.rs  config_editor.rs  mod.rs  palette_editor.rs
crates/pixelpipe-test-fixtures/: Cargo.toml
crates/pixelpipe-test-fixtures/src/: lib.rs
