[package]
name = "pixelpipe-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the pixelpipe pixel art asset pipeline"

[[bin]]
name = "pixelpipe"
path = "src/main.rs"

[dependencies]
pixelpipe-core = { path = "../pixelpipe-core" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
colored = "2"
image = "0.25"
notify = "7"
