[package]
name = "pixelpipe-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the pixelpipe pixel art asset pipeline"

[dependencies]
image = "0.25"
gif = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
rayon = "1.10"
glob = "0.3"
log = "0.4"

[dev-dependencies]
pixelpipe-test-fixtures = { path = "../pixelpipe-test-fixtures" }
